data/raw_logs/syntactic/syn_27.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_27.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_27.c:1:1: error: expected declaration or statement at end of input
    1 | int main() { if(1) return 0; else { return 1; }
      | ^~~
